--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -2,3 +2,27 @@
   width: 100%;
   height: 100%;
 }
+
+.dayView{
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 50%;
+}
+
+.hourView{
+  text-align: right;
+  width: 33.3%;
+  height: 50px;
+  background: yellow;
+  clear: left;
+  float: left;
+}
+
+.hourContainer{
+  float: left;
+}
+
+.hourContainer h3{
+  text-align: center;
+}
