--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -1,19 +1,31 @@
-.app-root{
-  width: 100%;
-  height: 100%;
-}
-
-.dayView{
+.topContainer{
+  padding: 1em;
+  background-color: white;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
   width: 50%;
+  min-width: 700px;
+  border-radius: 2px;
+  -webkit-box-shadow: 10px 10px 52px -8px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 52px -8px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 52px -8px rgba(0,0,0,0.75);
+}
+
+.scheduleNavigation{
+  display: inline-block;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+.hourRow{
+  background-color: black;
+  height: 4em;
 }
 
 .hourView{
   text-align: right;
-  width: 33.3%;
-  height: 50px;
+  width: 20%;
   background: yellow;
   clear: left;
   float: left;
@@ -21,8 +33,19 @@
 
 .hourContainer{
   float: left;
+  background: green;
+  width: 70%;
 }
+
+.hourController{
+  width:10%;
+  background-color: red;
+  float: left;
+}
+
 
 .hourContainer h3{
   text-align: center;
+  font-size: 1em;
+  margin: 1em;
 }
