--- a/client/stylesheets/schedule-components.scss
+++ b/client/stylesheets/schedule-components.scss
@@ -18,23 +18,36 @@
   margin-right: 1em;
 }
 
+.scheduleNavigation h2{
+  font-size: 1.5em;
+}
+
 .hourRow{
-  background-color: black;
   height: 4em;
+  width: 100%;
+  margin-bottom: .2em;
+}
+
+.hourContents{
+  float: left;
+  clear: right;
+  width: 80%;
+  height: 100%;
+  border-radius: 3px;
+  background-color: #f6f1ed;
 }
 
 .hourView{
   text-align: right;
+  padding: .5em;
   width: 20%;
-  background: yellow;
   clear: left;
   float: left;
 }
 
 .hourContainer{
   float: left;
-  background: green;
-  width: 70%;
+  width: 90%;
 }
 
 .hourController{
@@ -45,7 +58,7 @@
 
 
 .hourContainer h3{
-  text-align: center;
-  font-size: 1em;
-  margin: 1em;
+  text-align: left;
+  font-size: 1.2em;
+  margin: .5em;
 }
