--- a/client/stylesheets/top-components.scss
+++ b/client/stylesheets/top-components.scss
@@ -1,12 +1,24 @@
+html{
+  background-color: #b5a397;
+}
+
+h1{
+  font-family: 'Ultra', serif;
+}
+
+h2, h3{
+  font-family: 'Stint Ultra Expanded', cursive;
+}
+
+p{
+  font-family: 'Slabo 13px', serif;
+}
+
 .app-root{
   width: 100%;
   height: 100%;
   display: table;
   position: absolute;
-}
-
-html{
-  background-color: #b56969;
 }
 
 .alignerContainer{
