Fixed fonts, changed preview time position.

--- a/client/stylesheets/schedule-components.scss
+++ b/client/stylesheets/schedule-components.scss
@@ -45,6 +45,12 @@
   float: left;
 }
 
+.hourView h3{
+  margin: 0;
+  margin-right: 0.5em;
+  font-size: 1em;
+}
+
 .hourContainer{
   float: left;
   width: 90%;
