--- a/client/stylesheets/top-components.scss
+++ b/client/stylesheets/top-components.scss
@@ -3,15 +3,15 @@ html{
 }
 
 h1{
-  font-family: 'Ultra', serif;
+  font-family: 'Julius Sans One', sans-serif;
 }
 
 h2, h3{
-  font-family: 'Stint Ultra Expanded', cursive;
+  font-family: 'Julius Sans One', sans-serif;
 }
 
 p{
-  font-family: 'Slabo 13px', serif;
+  font-family: 'Crimson Text', serif;
 }
 
 .app-root{
